--- a/TFX_Visualize_Distribution.ipynb
+++ b/TFX_Visualize_Distribution.ipynb
@@ -27,6 +27,16 @@
     },
     {
       "metadata": {
+        "id": "4mGLctEDLyWB",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "This is accompanying notebook for my linkedin article - https://www.linkedin.com/pulse/tensorflow-extended-tfx-data-analysis-validation-drift-srinivasan/\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "RaV3fiO1iI81",
         "colab_type": "code",
         "colab": {}
